--- a/MyEngine/MyEngine/MyEngine.vcxproj
+++ b/MyEngine/MyEngine/MyEngine.vcxproj
@@ -150,7 +150,7 @@
     <ClInclude Include="CheckButtonUI.h" />
     <ClInclude Include="Coin.h" />
     <ClInclude Include="CollisionComponent.h" />
-    <ClInclude Include="DamageObject.h" />
+    <ClInclude Include="FontObject.h" />
     <ClInclude Include="DashEffect.h" />
     <ClInclude Include="Dungeon1Scene.h" />
     <ClInclude Include="DungeonEatEvent.h" />
@@ -162,6 +162,7 @@
     <ClInclude Include="GiantSkullSpawnEvent.h" />
     <ClInclude Include="GiantSkullWarrior.h" />
     <ClInclude Include="Gold.h" />
+    <ClInclude Include="GoldBar.h" />
     <ClInclude Include="GreatSword.h" />
     <ClInclude Include="HomingMissileEffect.h" />
     <ClInclude Include="InfRepeatBg.h" />
@@ -247,7 +248,7 @@
     <ClCompile Include="CheckButtonUI.cpp" />
     <ClCompile Include="Coin.cpp" />
     <ClCompile Include="CollisionComponent.cpp" />
-    <ClCompile Include="DamageObject.cpp" />
+    <ClCompile Include="FontObject.cpp" />
     <ClCompile Include="DashEffect.cpp" />
     <ClCompile Include="Dungeon1Scene.cpp" />
     <ClCompile Include="DungeonEatEvent.cpp" />
@@ -259,6 +260,7 @@
     <ClCompile Include="GiantSkullSpawnEvent.cpp" />
     <ClCompile Include="GiantSkullWarrior.cpp" />
     <ClCompile Include="Gold.cpp" />
+    <ClCompile Include="GoldBar.cpp" />
     <ClCompile Include="GreatSword.cpp" />
     <ClCompile Include="HomingMissileEffect.cpp" />
     <ClCompile Include="InfRepeatBg.cpp" />
