--- a/MyEngine/MyEngine/MyEngine.vcxproj
+++ b/MyEngine/MyEngine/MyEngine.vcxproj
@@ -192,6 +192,7 @@
     <ClInclude Include="LockedDoor.h" />
     <ClInclude Include="MagicWandBullet.h" />
     <ClInclude Include="Monster.h" />
+    <ClInclude Include="MonsterAttAfterState.h" />
     <ClInclude Include="MonsterAttState.h" />
     <ClInclude Include="MonsterBullet.h" />
     <ClInclude Include="MonsterDeadState.h" />
@@ -300,6 +301,7 @@
     <ClCompile Include="LockedDoor.cpp" />
     <ClCompile Include="MagicWandBullet.cpp" />
     <ClCompile Include="Monster.cpp" />
+    <ClCompile Include="MonsterAttAfterState.cpp" />
     <ClCompile Include="MonsterAttState.cpp" />
     <ClCompile Include="MonsterBullet.cpp" />
     <ClCompile Include="MonsterDeadState.cpp" />
