--- a/MyEngine/MyEngine/MyEngine.vcxproj
+++ b/MyEngine/MyEngine/MyEngine.vcxproj
@@ -187,6 +187,8 @@
     <ClInclude Include="InventoryUI.h" />
     <ClInclude Include="Item.h" />
     <ClInclude Include="ItemGetHUD.h" />
+    <ClInclude Include="ItemInfoHUD.h" />
+    <ClInclude Include="ItemUI.h" />
     <ClInclude Include="JumpState.h" />
     <ClInclude Include="LaraMagicWand.h" />
     <ClInclude Include="LineCollider.h" />
@@ -297,6 +299,8 @@
     <ClCompile Include="InventoryUI.cpp" />
     <ClCompile Include="Item.cpp" />
     <ClCompile Include="ItemGetHUD.cpp" />
+    <ClCompile Include="ItemInfoHUD.cpp" />
+    <ClCompile Include="ItemUI.cpp" />
     <ClCompile Include="JumpState.cpp" />
     <ClCompile Include="LaraMagicWand.cpp" />
     <ClCompile Include="LineCollider.cpp" />
