Minimap HUD Implement

--- a/MyEngine/MyEngine/MyEngine.vcxproj
+++ b/MyEngine/MyEngine/MyEngine.vcxproj
@@ -194,6 +194,7 @@
     <ClInclude Include="LineCollider.h" />
     <ClInclude Include="LockedDoor.h" />
     <ClInclude Include="MagicWandBullet.h" />
+    <ClInclude Include="MinimapHUD.h" />
     <ClInclude Include="Monster.h" />
     <ClInclude Include="MonsterAttAfterState.h" />
     <ClInclude Include="MonsterAttState.h" />
@@ -306,6 +307,7 @@
     <ClCompile Include="LineCollider.cpp" />
     <ClCompile Include="LockedDoor.cpp" />
     <ClCompile Include="MagicWandBullet.cpp" />
+    <ClCompile Include="MinimapHUD.cpp" />
     <ClCompile Include="Monster.cpp" />
     <ClCompile Include="MonsterAttAfterState.cpp" />
     <ClCompile Include="MonsterAttState.cpp" />
